log
sá., 23 de abr. de 2022 18:47:22: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  8|7
total_score: 10/70
6ab47f0
sá., 23 de abr. de 2022 18:55:42: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|6
total_score: 10/70
aab157b
sá., 23 de abr. de 2022 18:57:01: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|5
total_score: 15/70
35a35b3
sá., 23 de abr. de 2022 18:58:09: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:118:28: error: 'key' undeclared (first use in this function)
       if (tree->lower_than(key, aux->pair->key) == 1)
                            ^~~
treemap.c:118:28: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dca7201
sá., 23 de abr. de 2022 19:00:44: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:118:31: error: 'TreeNode {aka struct TreeNode}' has no member named 'key'
       if (tree->lower_than(aux->key, aux->pair->key) == 1)
                               ^~
treemap.c:122:49: error: 'key' undeclared (first use in this function)
       else if(tree->lower_than(aux->pair->key , key) == 1)
                                                 ^~~
treemap.c:122:49: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
214b7ea
sá., 23 de abr. de 2022 19:04:58: 
 treemap.c | 19 ++++---------------
 1 file changed, 4 insertions(+), 15 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:119:15: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
        return minimum(aux);
               ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
28fd5f8
sá., 23 de abr. de 2022 19:05:43: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
1882349
sá., 23 de abr. de 2022 19:08:00: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  14|5
total_score: 20/70
2d3e00c
sá., 23 de abr. de 2022 19:11:58: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:129:26: error: format '%d' expects argument of type 'int', but argument 2 has type 'void *' [-Werror=format=]
                 printf("%d\n", aux->parent->pair->key);
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
a0cc7f4
sá., 23 de abr. de 2022 19:12:44: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:129:33: error: expected expression before 'int'
                 printf("%d\n",(*int) aux->parent->pair->key);
                                 ^~~
treemap.c:129:38: error: expected ')' before 'aux'
                 printf("%d\n",(*int) aux->parent->pair->key);
                                      ^~~
Compilation failed
d0c73bd
sá., 23 de abr. de 2022 19:14:18: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:129:35: error: expected expression before 'int'
                 printf("%d\n", *(*int) aux->parent->pair->key);
                                   ^~~
treemap.c:129:40: error: expected ')' before 'aux'
                 printf("%d\n", *(*int) aux->parent->pair->key);
                                        ^~~
Compilation failed
dc0fc10
sá., 23 de abr. de 2022 19:18:43: 
 treemap.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  14|5
total_score: 20/70
e0697d5
sá., 23 de abr. de 2022 19:20:01: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
784d9f5
do., 24 de abr. de 2022  1:28:59: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  14|5
total_score: 20/70
ffddb3f
do., 24 de abr. de 2022  1:30:56: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:134:62: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
             else if (tree->lower_than((aux->parent->pair->key, aux->pair->key) == 1) || (aux->parent->pair->key == aux->pair->key))
                                                              ^
treemap.c:134:80: error: comparison between pointer and integer [-Werror]
             else if (tree->lower_than((aux->parent->pair->key, aux->pair->key) == 1) || (aux->parent->pair->key == aux->pair->key))
                                                                                ^~
treemap.c:134:39: error: passing argument 1 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
             else if (tree->lower_than((aux->parent->pair->key, aux->pair->key) == 1) || (aux->parent->pair->key == aux->pair->key))
                                       ^
treemap.c:134:39: note: expected 'void *' but argument is of type 'int'
treemap.c:134:22: error: too few arguments to function 'tree->lower_than'
             else if (tree->lower_than((aux->parent->pair->key, aux->pair->key) == 1) || (aux->parent->pair->key == aux->pair->key))
                      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bb5d6b5
do., 24 de abr. de 2022  1:31:58: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
83677a4
